--- a/PortalAnuncios/Views/Enderecos/Index.cshtml
+++ b/PortalAnuncios/Views/Enderecos/Index.cshtml
@@ -25,7 +25,7 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Cliente.Name)
+                @Html.DisplayFor(modelItem => item.Cliente.Nome)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Rua)
