--- a/PortalAnuncios/Views/Anuncios/Create.cshtml
+++ b/PortalAnuncios/Views/Anuncios/Create.cshtml
@@ -17,6 +17,16 @@
                 <select asp-for="AnuncianteId" class ="form-control" asp-items="ViewBag.AnuncianteId"></select>
             </div>
             <div class="form-group">
+                <label asp-for="Titulo" class="control-label"></label>
+                <input asp-for="Titulo" class="form-control" />
+                <span asp-validation-for="Titulo" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Descricao" class="control-label"></label>
+                <input asp-for="Descricao" class="form-control" />
+                <span asp-validation-for="Descricao" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
