--- a/PortalAnuncios/Views/Anuncios/Edit.cshtml
+++ b/PortalAnuncios/Views/Anuncios/Edit.cshtml
@@ -19,6 +19,16 @@
                 <span asp-validation-for="AnuncianteId" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Titulo" class="control-label"></label>
+                <input asp-for="Titulo" class="form-control" />
+                <span asp-validation-for="Titulo" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Descricao" class="control-label"></label>
+                <input asp-for="Descricao" class="form-control" />
+                <span asp-validation-for="Descricao" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
