--- a/PortalAnuncios/Views/Candidaturas/Delete.cshtml
+++ b/PortalAnuncios/Views/Candidaturas/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model ModelagemBd.Anuncio
+﻿@model ModelagemBd.Candidatura
 
 @{
     ViewData["Title"] = "Delete";
@@ -8,26 +8,26 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Anuncio</h4>
+    <h4>Candidatura</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Anunciante)
+            @Html.DisplayNameFor(model => model.Anuncio)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Anunciante.Nome)
+            @Html.DisplayFor(model => model.Anuncio.Descricao)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Titulo)
+            @Html.DisplayNameFor(model => model.Candidato)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Titulo)
+            @Html.DisplayFor(model => model.Candidato.Nome)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Descricao)
+            @Html.DisplayNameFor(model => model.Status)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Descricao)
+            @Html.DisplayFor(model => model.Status)
         </dd>
     </dl>
     
