--- a/PortalAnuncios/Views/Enderecos/Details.cshtml
+++ b/PortalAnuncios/Views/Enderecos/Details.cshtml
@@ -14,7 +14,7 @@
             @Html.DisplayNameFor(model => model.Cliente)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Cliente.Name)
+            @Html.DisplayFor(model => model.Cliente.Nome)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Rua)
