implementa mapeamento das classes com EF e FluentApi

--- a/PortalAnuncios/Views/Anuncios/Delete.cshtml
+++ b/PortalAnuncios/Views/Anuncios/Delete.cshtml
@@ -15,7 +15,7 @@
             @Html.DisplayNameFor(model => model.Anunciante)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Anunciante.Nome)
+            @Html.DisplayFor(model => model.Anunciante.Cpf)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Titulo)
