--- a/PortalAnuncios/Views/Anuncios/Index.cshtml
+++ b/PortalAnuncios/Views/Anuncios/Index.cshtml
@@ -28,7 +28,7 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Anunciante.Nome)
+                @Html.DisplayFor(modelItem => item.Anunciante.Cpf)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Titulo)
