--- a/PortalAnuncios/Views/Candidaturas/Create.cshtml
+++ b/PortalAnuncios/Views/Candidaturas/Create.cshtml
@@ -1,5 +1,4 @@
-﻿@using ModelagemBd
-@model ModelagemBd.Candidatura
+﻿@model ModelagemBd.Candidatura
 
 @{
     ViewData["Title"] = "Create";
@@ -23,9 +22,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Status" class="control-label"></label>
-                <select asp-for="Status" class="form-control"
-                asp-items="Html.GetEnumSelectList<StatusEnum>()"
-                ></select>
+                <select asp-for="Status" class="form-control"></select>
                 <span asp-validation-for="Status" class="text-danger"></span>
             </div>
             <div class="form-group">
