--- a/PortalAnuncios/Views/Candidaturas/Index.cshtml
+++ b/PortalAnuncios/Views/Candidaturas/Index.cshtml
@@ -31,7 +31,7 @@
                 @Html.DisplayFor(modelItem => item.Anuncio.Descricao)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Candidato.Nome)
+                @Html.DisplayFor(modelItem => item.Candidato.Cpf)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Status)
