--- a/PortalAnuncios/Views/Candidaturas/Delete.cshtml
+++ b/PortalAnuncios/Views/Candidaturas/Delete.cshtml
@@ -21,7 +21,7 @@
             @Html.DisplayNameFor(model => model.Candidato)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Candidato.Nome)
+            @Html.DisplayFor(model => model.Candidato.Cpf)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Status)
