--- a/PortalAnuncios/Views/Candidaturas/Details.cshtml
+++ b/PortalAnuncios/Views/Candidaturas/Details.cshtml
@@ -20,7 +20,7 @@
             @Html.DisplayNameFor(model => model.Candidato)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Candidato.Nome)
+            @Html.DisplayFor(model => model.Candidato.Cpf)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Status)
@@ -34,5 +34,3 @@
     <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
-
-@await Html.PartialAsync("HistoricoIndex.cshtml", Model.Historico)
